{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 107,
  "lineage": "d75e7011-f3c9-7d91-faf7-2ef43c3a3c68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2144dcb01291d5a",
            "association_id": "eipassoc-0174e07f08906c063",
            "domain": "vpc",
            "id": "eipalloc-0d2144dcb01291d5a",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-003f31bc66e5b64b8",
            "private_dns": "ip-10-0-1-206.sa-east-1.compute.internal",
            "private_ip": "10.0.1.206",
            "public_dns": "ec2-18-228-148-141.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.228.148.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:internet-gateway/igw-07543af8ce66f1b05",
            "id": "igw-07543af8ce66f1b05",
            "owner_id": "003669760817",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2144dcb01291d5a",
            "connectivity_type": "public",
            "id": "nat-00dd7ee1264f958ad",
            "network_interface_id": "eni-0cd2fa254ade961ca",
            "private_ip": "10.0.1.119",
            "public_ip": "18.228.148.141",
            "subnet_id": "subnet-00b6c86af26b29082",
            "tags": {
              "Name": "dev-natgw"
            },
            "tags_all": {
              "Name": "dev-natgw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.dev-pub-1b",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:route-table/rtb-0f49dcf99020bc99f",
            "id": "rtb-0f49dcf99020bc99f",
            "owner_id": "003669760817",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00dd7ee1264f958ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-route"
            },
            "tags_all": {
              "Name": "dev-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_subnet.dev-pub-1b",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:route-table/rtb-0eded51c4efea2c72",
            "id": "rtb-0eded51c4efea2c72",
            "owner_id": "003669760817",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07543af8ce66f1b05",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-pub-route"
            },
            "tags_all": {
              "Name": "dev-pub-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "A1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c56e702f1263766e",
            "route_table_id": "rtb-0eded51c4efea2c72",
            "subnet_id": "subnet-059c900a91f9f47be"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.dev-pub-route",
            "aws_subnet.dev-pub-1a",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "A2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b125eecd8c6669f",
            "route_table_id": "rtb-0eded51c4efea2c72",
            "subnet_id": "subnet-00b6c86af26b29082"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.dev-pub-route",
            "aws_subnet.dev-pub-1b",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "A3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0513ea7ed2ed979ff",
            "route_table_id": "rtb-0eded51c4efea2c72",
            "subnet_id": "subnet-01c5b2ec6e6c68e01"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.dev-pub-route",
            "aws_subnet.dev-pub-1c",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "A4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6cc9abaf6586408",
            "route_table_id": "rtb-0f49dcf99020bc99f",
            "subnet_id": "subnet-049298db40cbd36e7"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-private-route",
            "aws_subnet.dev-private-1a",
            "aws_subnet.dev-pub-1b",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "A5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3a76900a6eb7fe9",
            "route_table_id": "rtb-0f49dcf99020bc99f",
            "subnet_id": "subnet-0176ac4ec3333f09b"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-private-route",
            "aws_subnet.dev-private-1b",
            "aws_subnet.dev-pub-1b",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "A6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071d54227d5e6e0dc",
            "route_table_id": "rtb-0f49dcf99020bc99f",
            "subnet_id": "subnet-0b7865d7421976bb4"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-private-route",
            "aws_subnet.dev-private-1c",
            "aws_subnet.dev-pub-1b",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "A7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0572bab2851e725b7",
            "route_table_id": "rtb-0f49dcf99020bc99f",
            "subnet_id": "subnet-0d9f9e6bc1b85a2fb"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-private-route",
            "aws_subnet.dev-data-1a",
            "aws_subnet.dev-pub-1b",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "A8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fdb35ba6283eba3",
            "route_table_id": "rtb-0f49dcf99020bc99f",
            "subnet_id": "subnet-0aa6226d88c70653e"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-private-route",
            "aws_subnet.dev-data-1b",
            "aws_subnet.dev-pub-1b",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "A9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006b98aa0257abccf",
            "route_table_id": "rtb-0f49dcf99020bc99f",
            "subnet_id": "subnet-0c9f912139b54342a"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.dev-natgw",
            "aws_route_table.dev-private-route",
            "aws_subnet.dev-data-1c",
            "aws_subnet.dev-pub-1b",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-data-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:subnet/subnet-0d9f9e6bc1b85a2fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9f9e6bc1b85a2fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003669760817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-data-1a"
            },
            "tags_all": {
              "Name": "dev-data-1a"
            },
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-data-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:subnet/subnet-0aa6226d88c70653e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa6226d88c70653e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003669760817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-data-1b"
            },
            "tags_all": {
              "Name": "dev-data-1b"
            },
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-data-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:subnet/subnet-0c9f912139b54342a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9f912139b54342a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003669760817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-data-1c"
            },
            "tags_all": {
              "Name": "dev-data-1c"
            },
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:subnet/subnet-049298db40cbd36e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049298db40cbd36e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003669760817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-1a"
            },
            "tags_all": {
              "Name": "dev-private-1a"
            },
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:subnet/subnet-0176ac4ec3333f09b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0176ac4ec3333f09b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003669760817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-1b"
            },
            "tags_all": {
              "Name": "dev-private-1b"
            },
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:subnet/subnet-0b7865d7421976bb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7865d7421976bb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003669760817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-1c"
            },
            "tags_all": {
              "Name": "dev-private-1c"
            },
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:subnet/subnet-059c900a91f9f47be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059c900a91f9f47be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "003669760817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pub-1a"
            },
            "tags_all": {
              "Name": "dev-pub-1a"
            },
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:subnet/subnet-00b6c86af26b29082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b6c86af26b29082",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "003669760817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pub-1b"
            },
            "tags_all": {
              "Name": "dev-pub-1b"
            },
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:subnet/subnet-01c5b2ec6e6c68e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c5b2ec6e6c68e01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "003669760817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pub-1c"
            },
            "tags_all": {
              "Name": "dev-pub-1c"
            },
            "vpc_id": "vpc-0750b36a601cb2b84"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:003669760817:vpc/vpc-0750b36a601cb2b84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f564f1cbedd85132",
            "default_route_table_id": "rtb-0abd2251db1d3caed",
            "default_security_group_id": "sg-097a04a688cfb497b",
            "dhcp_options_id": "dopt-02bd74d7a31639bec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0750b36a601cb2b84",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abd2251db1d3caed",
            "owner_id": "003669760817",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}